--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,14 @@
 {
-    "name": "likeabas/filament-chatgpt-agent",
+    "name": "edrisaturay/filament-chatgpt-agent",
     "description": "Integrate with OpenAI ChatGPT",
     "version": "1.0.3",
     "keywords": [
         "likeabas",
+        "edrisaturay",
         "laravel",
         "filament-chatgpt-agent"
     ],
-    "homepage": "https://github.com/likeabas/filament-chatgpt-agent",
+    "homepage": "https://github.com/edrisaturay/filament-chatgpt-agent",
     "license": "MIT",
     "require": {
         "php": ">=8.0",
@@ -28,12 +29,12 @@
     },
     "autoload": {
         "psr-4": {
-            "LikeABas\\FilamentChatgptAgent\\": "src"
+            "EdrisaTuray\\FilamentChatgptAgent\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "LikeABas\\FilamentChatgptAgent\\Tests\\": "tests"
+            "EdrisaTuray\\FilamentChatgptAgent\\Tests\\": "tests"
         }
     },
     "scripts": {
@@ -53,10 +54,10 @@
     "extra": {
         "laravel": {
             "providers": [
-                "LikeABas\\FilamentChatgptAgent\\FilamentChatgptAgentServiceProvider"
+                "EdrisaTuray\\FilamentChatgptAgent\\FilamentChatgptAgentServiceProvider"
             ],
             "aliases": {
-                "FilamentChatgptAgent": "LikeABas\\FilamentChatgptAgent\\Facades\\FilamentChatgptAgent"
+                "FilamentChatgptAgent": "EdrisaTuray\\FilamentChatgptAgent\\Facades\\FilamentChatgptAgent"
             }
         }
     },
