Changed maintainer email

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "authors": [
         {
             "name": "Edrisa A Turay",
-            "email": "edrisa.turay@gmail.com",
+            "email": "edrisa@edrisa.com",
             "homepage": "https://github.com/edrisaturay",
             "role": "Maintainer"
         },
